--- a/vscode/settings.jsonc
+++ b/vscode/settings.jsonc
@@ -77,6 +77,7 @@
   },
   "gutterpreview.showImagePreviewOnGutter": false,
   "liveServer.settings.donotShowInfoMsg": true,
+  "markdownShiki.theme": "dark_plus",
   "material-icon-theme.hidesExplorerArrows": false,
   "spellright.groupDictionaries": false,
   // Format Settings
