--- a/vscode/settings.jsonc
+++ b/vscode/settings.jsonc
@@ -1,9 +1,9 @@
 {
   // Project Based Settings
   "editor.cursorBlinking": "phase",
-  "editor.fontFamily": "Cartograph CF",
-  "editor.fontLigatures": "'ss03'",
-  "editor.fontWeight": "300",
+  "editor.fontFamily": "Office Code Pro",
+  "editor.fontLigatures": false,
+  "editor.fontWeight": "400",
   "editor.formatOnSaveMode": "file",
   "emmet.showExpandedAbbreviation": "always",
   "explorer.sortOrder": "filesFirst",
@@ -56,7 +56,8 @@
   "colorize.languages": ["css", "json", "jsonc", "svg"],
   "emmet.excludeLanguages": [],
   "emmet.includeLanguages": {
-    "javascript": "javascriptreact"
+    "javascript": "javascriptreact",
+    "markdown": "html"
   },
   "gutterpreview.showImagePreviewOnGutter": false,
   "liveServer.settings.donotShowInfoMsg": true,
@@ -77,6 +78,9 @@
     "editor.defaultFormatter": "vscode.html-language-features"
   },
   "javascript.format.enable": false,
+  "[markdown]": {
+    "editor.quickSuggestions": true
+  },
   // Miscellaneous
   "breadcrumbs.enabled": false,
   "diffEditor.renderSideBySide": false,
